# climetlab-plugin-a6

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check-and-publish.yml
climetlab_maelstrom_power_production/: __init__.py  config.py  dataset.py  merger.py
climetlab_maelstrom_power_production/constants/: a_b.py
climetlab_maelstrom_power_production/production/: production.py
climetlab_maelstrom_power_production/weather/: abc.py  merger.py  model_level.py  pressure_level.py  surface_level.py
notebooks/: demo_maelstrom_production_forecasts.ipynb
notebooks/utils/: __init__.py  data.py  density.py  metrics.py  model.py  plot.py  pressure.py  test_data.py  test_density.py  test_model.py  test_pressure.py  test_time.py  test_wind.py  time.py  wind.py
tests/integration/: test_download_turbine_data.py
tests/unit/weather/: test_abc.py
